Fix simplelist with introtext breaks the view in responsive tablelike style! #2005
Introtext is shown under event data.

--- a/media/css/jem-responsive.css
+++ b/media/css/jem-responsive.css
@@ -383,6 +383,15 @@ body.com_jem.body-overlayed {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: flex-start;
+    width: 100%;
+}
+
+
+#jem .jem-list-column {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: flex-start;
 }
 
 #jem .jem-small-list {
